fixed overflow issue pertaining to fieldset height issue in the Environs theme (line 748 in styles.css)

--- a/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
+++ b/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
@@ -37,11 +37,11 @@ h1.title {
   font-weight: bold;
   font-size: 22px;
   color: #736357;
-  margin: 0 0 8px 0px;
+  margin: 0 0 8px 2px;
 }
 
 .breadcrumbs { 
-	margin-left: 0px;
+	margin-left: 5px;
 }
 
 h3 {
@@ -743,6 +743,10 @@ form input.form-submit, .views-exposed-form .views-exposed-widget input.form-sub
 	min-height: 37px;
 	#height: 37px;
 	margin: 0 10px 0 0;
+}
+
+html.js fieldset.collapsible .fieldset-wrapper {
+	overflow: none;
 }
 
 /*------------------------------------------
